{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 10,
  "lineage": "1825c0a8-21da-f8dd-5656-416c2792b6bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725215636:security-group/sg-06ae4f635ad85d062",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06ae4f635ad85d062",
            "ingress": [],
            "name": "prod-firewall",
            "name_prefix": "",
            "owner_id": "851725215636",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076f1cb65df6b666f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usa",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725215636:security-group/sg-090a8dffeca55032e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-090a8dffeca55032e",
            "ingress": [],
            "name": "stage-firewall",
            "name_prefix": "",
            "owner_id": "851725215636",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06859279a3c62121c"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}